
LogicalDOC 6.3.2 (2011-12-13; logicaldoc-6.3.2)
===============
123 -	Japanese support - Improvement - Core
126 -	Unable to update user details - Bug - Core
128 -	Optimized PDF conversion speed - Improvement - Generic
129 -	Upgrade the component for the preview of documents - Task - User Interface
131 -	Preview for TIFF and GIF images - Bug - Core
132 -	Better thumbnail presentation - Improvement - User Interface 


LogicalDOC 6.3.1 (2011-11-23; logicaldoc-6.3.1)
===============
113 - Problem with permissions and alias properties invisible - Bug - Core
114 - Sub-folder search difference between non-admin & admin account - Bug - Search
119 - Preview not Working on Linux - Bug - Core
116 - Automatic focus on New Folder dialog box - Improvement - User Interface
124 - A user with only read privileges can delete tags on document - Bug - User Interface
125 - Unable to build export archives - Bug - Import Export
115 - Download item in versions context menu - Improvement - User Interface
117 - Rename item in Document's context menu - Improvement - User Interface


LogicalDOC 6.3 (2011-10-10; logicaldoc-6.3)
===============
87	- Recognize PDF vectorial barcodes - Improvement - Barcode
102	- Export folder contents in .ZIP does not handle properly non latin chars	- Bug - Core
82	- Professional OCR Engine	- Improvement - Core
109	- Workflow status tracking	- Improvement - Core
5	  - Searcheable version comment	- Improvement - Core
90	- Parsing timeout - Improvement - Core
71	- Folders tree template	- New Feature - Core
99	- Direct link to folder and document - New Feature - Core
103	- Compatibility with MS SQLServer	- Task - Core
83	- Routing policy for e-mail content -	Improvement - Import/Export
94	- Configurable import policy - Improvement - Import/Export
4	  - Extending RSS Feed - Improvement - RSS
88	- Visual workflow designer - Improvement - User Interface
10	- Showing folder name in search results - Improvement - User Interface