@@ -17,7 +17,8 @@ LogicalDOC 6.3.2 (2011-12-13; logicaldoc-6.3.2)
 128 -	Optimized PDF conversion speed - Improvement - Generic
 129 -	Upgrade the component for the preview of documents - Task - User Interface
 131 -	Preview for TIFF and GIF images - Bug - Core
-132 -	Better thumbnail presentation - Improvement - User Interface 
+132 -	Better thumbnail presentation - Improvement - User Interface
+135 -	Confirmation prompt when moving items/folders -	Improvement -	User Interface 
 
 
 LogicalDOC 6.3.1 (2011-11-23; logicaldoc-6.3.1)
